Add .gitignore to exclude unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,43 @@
-# Angular specific
-/dist/
-/out-tsc/
-/tmp/
-/coverage/
-/e2e/test-output/
-/.angular/
-.angular/
+# -------------------------
+# Node (frontend) ignores
+# -------------------------
+frontend/node_modules/
+frontend/dist/
+frontend/debug.log
 
-# Node modules and dependency files
-/node_modules/
-/package-lock.json
-/yarn.lock
+# -------------------------
+# Angular environment files (optional: adjust if needed)
+# -------------------------
+frontend/src/environments/*.ts
 
-# Environment files
-/.env
+# -------------------------
+# .NET (backend) ignores
+# -------------------------
+backend/bin/
+backend/obj/
+backend/**/*.user
+backend/**/*.rsuser
+backend/**/appsettings.*.json
 
-# Angular CLI and build artefacts
-/.angular-cli.json
-/.ng/
+# -------------------------
+# General system ignores
+# -------------------------
+*.DS_Store
+Thumbs.db
+*.log
 
-# TypeScript cache
-*.tsbuildinfo
+# -------------------------
+# Visual Studio / Rider / VS Code
+# -------------------------
+.vscode/
+.idea/
+*.suo
+*.user
+*.sln.docstates
 
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# -------------------------
+# OS junk
+# -------------------------
+.DS_Store
+ehthumbs.db
+Icon?
